# www

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
agentforge/: __init__.py  cli.py
agentforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentforge/core/: engine.py  loader.py
agentforge/skills/: ascii-art.yaml  base64-encode.yaml  code-review.yaml  color-picker.yaml  cron-helper.yaml  crypto-price.yaml  dns-lookup.yaml  github-repo-info.yaml  hash-generator.yaml  ip-lookup.yaml  json-formatter.yaml  lorem-ipsum.yaml  morse-code.yaml  password-gen.yaml  pig-latin.yaml  ping-test.yaml  port-check.yaml  qr-generator.yaml  ssl-check.yaml  system-info.yaml  text-stats.yaml  url-reader.yaml  url-shortener.yaml  uuid-generator.yaml  weather.yaml  web-search.yaml  whois-lookup.yaml  word-counter.yaml
docs/: GUMROAD.md  PRODUCT_HUNT.md  QUICKSTART.md
examples/skills/: hello-world.yaml
packs/data/: api-extractor.yaml  api-mocker.yaml  csv-analyzer.yaml  data-cleaning.yaml  data-sampler.yaml  data-validator.yaml  data-visualizer.yaml  excel-processor.yaml  format-converter.yaml  json-transformer.yaml  merge-datasets.yaml  regex-builder.yaml  schema-generator.yaml  sql-query.yaml  web-scraper.yaml
packs/devops/: README.md  backup-status.yaml  ci-cd-debug.yaml  deploy-helper.yaml  disk-analyzer.yaml  docker-manager.yaml  infra-audit.yaml  k8s-inspector.yaml  log-analyzer.yaml  mysql-admin.yaml  nginx-manager.yaml  port-scanner.yaml  process-manager.yaml  redis-monitor.yaml  server-monitor.yaml  ssl-checker.yaml
(+16 files in other folders)
